// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in a closed sale renders bid when an auction is about to open, but not closed or finished 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={undefined}
  testID={undefined}
>
  <View>
    <AROpaqueImageView
      aspectRatio={0.74}
      imageURL="artsy.net/image-url"
      style={
        Object {
          "alignItems": "flex-start",
          "flexGrow": 1,
          "justifyContent": "center",
          "marginBottom": 10,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "bottom": 16,
            "display": "flex",
            "flexDirection": "row",
            "left": 1,
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
              },
              undefined,
            ]
          }
        >
          BUY NOW
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
              },
              undefined,
            ]
          }
        >
          BID
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 12,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../images/paddle.png",
        }
      }
      style={
        Object {
          "marginRight": 4,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      $200 (1 bid)
    </Text>
  </View>
</View>
`;

exports[`in a closed sale renders without any price information 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={undefined}
  testID={undefined}
>
  <View>
    <AROpaqueImageView
      aspectRatio={0.74}
      imageURL="artsy.net/image-url"
      style={
        Object {
          "alignItems": "flex-start",
          "flexGrow": 1,
          "justifyContent": "center",
          "marginBottom": 10,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "bottom": 16,
            "display": "flex",
            "flexDirection": "row",
            "left": 1,
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
              },
              undefined,
            ]
          }
        >
          BUY NOW
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
              },
              undefined,
            ]
          }
        >
          BID
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 12,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Auction Closed
  </Text>
</View>
`;

exports[`in an open sale renders with current bid 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={undefined}
  testID={undefined}
>
  <View>
    <AROpaqueImageView
      aspectRatio={0.74}
      imageURL="artsy.net/image-url"
      style={
        Object {
          "alignItems": "flex-start",
          "flexGrow": 1,
          "justifyContent": "center",
          "marginBottom": 10,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "bottom": 16,
            "display": "flex",
            "flexDirection": "row",
            "left": 1,
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
              },
              undefined,
            ]
          }
        >
          BUY NOW
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
              },
              undefined,
            ]
          }
        >
          BID
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 12,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../images/paddle.png",
        }
      }
      style={
        Object {
          "marginRight": 4,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      $200 (1 bid)
    </Text>
  </View>
</View>
`;

exports[`in an open sale renders with starting bid 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={undefined}
  testID={undefined}
>
  <View>
    <AROpaqueImageView
      aspectRatio={0.74}
      imageURL="artsy.net/image-url"
      style={
        Object {
          "alignItems": "flex-start",
          "flexGrow": 1,
          "justifyContent": "center",
          "marginBottom": 10,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "bottom": 16,
            "display": "flex",
            "flexDirection": "row",
            "left": 1,
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
              },
              undefined,
            ]
          }
        >
          BUY NOW
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
              },
              undefined,
            ]
          }
        >
          BID
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 12,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../images/paddle.png",
        }
      }
      style={
        Object {
          "marginRight": 4,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      $100
    </Text>
  </View>
</View>
`;

exports[`renders properly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={undefined}
  testID={undefined}
>
  <View>
    <AROpaqueImageView
      aspectRatio={0.74}
      imageURL="artsy.net/image-url"
      style={
        Object {
          "alignItems": "flex-start",
          "flexGrow": 1,
          "justifyContent": "center",
          "marginBottom": 10,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "bottom": 16,
            "display": "flex",
            "flexDirection": "row",
            "left": 1,
            "position": "absolute",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
              },
              undefined,
            ]
          }
        >
          BUY NOW
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderRadius": 2,
              "marginLeft": 5,
              "paddingBottom": 1,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 10,
              },
              undefined,
            ]
          }
        >
          BID
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Array [
          Object {
            "color": "#666666",
            "fontSize": 12,
          },
          Object {
            "fontWeight": "bold",
          },
        ],
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Mikael Olson
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Array [
            Object {
              "color": "#666666",
              "fontSize": 12,
            },
            Object {
              "fontStyle": "italic",
            },
          ],
          Object {
            "fontFamily": "AGaramondPro-Regular",
          },
        ]
      }
    >
      Some Kind of Dinosaur
    </Text>
    , 2015
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Gallery 1261
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "color": "#666666",
          "fontSize": 12,
        },
        Object {
          "fontFamily": "AGaramondPro-Regular",
        },
      ]
    }
  >
    Contact Gallery
  </Text>
</View>
`;
